# catchall

./: .gitignore  README.md  go.sh  makefile  pyproject.toml  setup.cfg  setup.py
booth/: __main__.py  booth.py  cli.py
catchall/: cli.py  dev.py  parallel.py  test_stddev.py  work.py
catchall/sci/: cli.py  parallel.py  script-visualize.py  test_stddev.py  work.py
lib/: stddev.cpp
press/: .gitignore  __main__.py  cli.py  makefile
press/render/: custom-imager.lua  github-markdown.css  gpress.py  intervene.py  markdown-toc-maker.py  style.tex
