[metadata]
name = catchall
description = Template for many kinds of projects.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Ryan Patrick Bradley
author_email = bradleyrp@gmail.com
license = MIT

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8
setup_requires =
	setuptools_scm
install_requires = 
	click
	numpy
	scipy
	ruamel.yaml
	tqdm
	pandas
	h5py
	ipdb
	matplotlib
	urllib3<2.0
	ortho @ git+https://github.com/bradleyrp/ortho.git@main

[options.extras_require]
sci = 
	mpi4py
press = 
	grip
dat =
interactive =
	notebook
gdrive =
	google-api-python-client
	google-auth-httplib2 
	google-auth-oauthlib
	simple-term-menu
easy = 
	%(press)s
	%(dat)s
	%(interactive)s
all =
	%(press)s
	%(sci)s
	%(dat)s
	%(interactive)s

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
	sciprog = catchall.sci.__main__:cli_hook
	gpress = press.__main__:cli_hook

[coverage:run]
source = catchall
