[metadata]
name = catchall
description = Template for good HPC projects.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Ryan Patrick Bradley
author_email = bradleyrp@gmail.com
license = MIT

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8
setup_requires =
	setuptools_scm
install_requires = 
    click
	numpy
	scipy
	ruamel.yaml
    tqdm
    pandas
    h5py
    ipdb
    mpi4py
    matplotlib

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    catchall = catchall.__main__:cli_hook

[coverage:run]
source = catchall

